# Ensemble-Generator

./: README.md  pyproject.toml
100K_all_AminoAcid_ensemble/: 000_make_folders.sh  000_submit_fm2_allFolders.sh  002_make_the2klists.sh  004A_make_fixbb_folders.sh  004B_submit_all_fixbb.sh  005_make_cs_folders.sh  006_submit_predict_cs.sh  007_make_joined_rama_cs_folders.sh  008_run_all_join_dihedral_cs.py  PolyAla.seq  submit_fm2.sh
500K_Gly/: 000_make_folders.sh  002_make_the2klists.sh  004A_make_fixbb_folders.sh  004B_submit_all_fixbb.sh  006_make_cs_folders.sh  007_submit_predict_cs.sh  009_make_joined_rama_cs_folders.sh  010_run_all_join_dihedral_cs.py  submit_fm2.sh
alanine_1mill/: 003_1klist_A.txt  submit_fm2.sh
